# airfree_backend_web3

./: pyproject.toml
api/: config.py  main.py  modules.py
api/core/: app_config.py
api/routes/airfree/: airfree.py
api/routes/airfree/models/: coin_name.sql  database_insert.sql  database_update.sql
